--- a/Assignment5_AdvancedCalculator/Assignment5_AdvancedCalculator/Assignment5_AdvancedCalculator.csproj
+++ b/Assignment5_AdvancedCalculator/Assignment5_AdvancedCalculator/Assignment5_AdvancedCalculator.csproj
@@ -43,8 +43,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdditionOperator.cs" />
+    <Compile Include="CalculatorMathLogic.cs" />
+    <Compile Include="EquationFactory.cs" />
+    <Compile Include="Calculator.cs" />
+    <Compile Include="DivideOperator.cs" />
+    <Compile Include="ExponentialOperator.cs" />
+    <Compile Include="IEquation.cs" />
+    <Compile Include="IOperator.cs" />
+    <Compile Include="MultiplicationOperator.cs" />
+    <Compile Include="Number.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SubtractOperator.cs" />
+    <Compile Include="UserInput.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
